# Audio-ResiDual

./: 1_Analyze_CLAP_Attention.ipynb  2_Apply_ResiDual_on_CLAP.ipynb  2_Apply_ResiDual_to_CLAP.ipynb  3_Evaluate_and_compare_CLAP_performance.ipynb  README.md
CLAP/: __init__.py
CLAP/src/: __init__.py
CLAP/src/laion_clap/: __init__.py  hook.py
CLAP/src/laion_clap/clap_module/: htsat.py  model.py
CLAP/src/laion_clap/training/: __init__.py
ResiDual/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
ResiDual/conf/: encode.gin  encode_pca.gin
ResiDual/conf/train/: base.gin  finetune.gin  linear_adapter.gin  residual_coarse.gin  residual_fine.gin  residual_full.gin  spectral_adapter.gin
ResiDual/experiments/: experiment1.gin  experiment1.ipynb  experiment1.py  experiment2.gin  experiment2.ipynb  experiment2.py  experiment3.ipynb  experiment3.py  experiment4.ipynb  experiment4.py  rebuttal.py
ResiDual/src/residual/: __init__.py  intrinsic_dimensionality.py  plot.py  residual.py  sparse_decomposition.py
ResiDual/src/residual/data/: data_registry.py  dataset.py
ResiDual/src/residual/data/encode/: __init__.py  residual_encode.py  text_encode.py
ResiDual/src/residual/decomposition/: ipca.py  test.py  unit_distance.py
ResiDual/src/residual/nn/: adapter.py  classifier.py  encoder.py  model_registry.py  train.py  utils.py
ResiDual/src/residual/tracing/: __init__.py  blip.py  dinov2.py  hf_clip.py  openclip.py  tracer.py  tracing_op.py  utils.py  vit.py
data_processing/: __init__.py  audio_dataset.py  download_utils.py  processing.py
datasets/: audio_dataset.py  data_processing.py
pca_results/: ESC50-fold0.csv  ESC50-fold1.csv  ESC50-fold2.csv  ESC50-fold3.csv  ESC50-fold4.csv
residual_pca/ESC50/: layer_0_evalfold_0  layer_0_evalfold_1  layer_0_evalfold_2  layer_0_evalfold_3  layer_0_evalfold_4  layer_1_evalfold_0  layer_1_evalfold_1  layer_1_evalfold_2  layer_1_evalfold_3  layer_1_evalfold_4  layer_2_evalfold_0  layer_2_evalfold_1  layer_2_evalfold_2  layer_2_evalfold_3  layer_2_evalfold_4
src/: __init__.py  analyze_attention.py  data_processing.py  evaluation.py  linear.py  residual.py  training.py
